sample/retrieveUnpackaged/objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Genere__c</fullName>
        <inlineHelpText>select books category or Genere</inlineHelpText>
        <label>Genere</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Autobiography</fullName>
                </value>
                <value>
                    <fullName>Fiction</fullName>
                </value>
                <value>
                    <fullName>Crime</fullName>
                </value>
                <value>
                    <fullName>Romance</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Scince</fullName>
                </value>
                <value>
                    <fullName>Fantasy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <inlineHelpText>On which date book published</inlineHelpText>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Book_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( Name)&lt;5</errorConditionFormula>
        <errorMessage>Book name must more than  5 character</errorMessage>
    </validationRules>
</CustomObject>